# BackingGenerator

./: .gitignore  CMakeLists.txt
resources/shaders/: ButtonVertexShader.glsl  SongFragmentShader.glsl  SongVertexShader.glsl  TextFragmentShader.glsl  TextVertexShader.glsl
resources/templates/: resolutiontest.xml  swingdrums.xml
src/: AudioHandler.cpp  AudioHandler.h  Button.cpp  Button.h  Chord.cpp  Chord.h  Drawable.cpp  Drawable.h  Song.cpp  Song.h  Text.cpp  Text.h  VSTHost.cpp  VSTHost.h  Viewport.cpp  Viewport.h  main.cpp
